test/classes/bradc/arrayInClass/arrayDomInClassRecord-illegal.good
arrayDomInClassRecord-illegal.chpl:32: In function 'baz':
arrayDomInClassRecord-illegal.chpl:33: error: illegal lvalue in assignment
